IE CSS Problems, removing predefined width from errors block to prevent clipping

--- a/registry/src/_styles/general.css
+++ b/registry/src/_styles/general.css
@@ -332,6 +332,7 @@ img
 	border: none;
 	vertical-align: top;
 	white-space: nowrap;
+	overflow:visible;
 }
 
 .recordTable td
